--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FinancialDrawing"
         tools:targetApi="31">
         <activity
+            android:name=".EditOperationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OperationDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".CreateNewOperationActivity"
             android:exported="false" />
         <activity
